simulation-wasm/tests/mechanics/snapshots/mechanics_tests__mechanics__snapshots__damage_vs_precision.snap
---
source: tests/snapshot_tests.rs
expression: data
---
{
  "description": "Precision (Monster) beats Damage (Player) in this setup",
  "median_win_rate": 0.0,
  "median_survivors": 0,
  "party_size": 1
}
