simulation-wasm/tests/mechanics/snapshots/mechanics_tests__mechanics__snapshots__fireball_aoe.snap
---
source: tests/mechanics/snapshots.rs
assertion_line: 125
expression: data
---
{
  "description": "Wizard should clear goblins with Fireball",
  "median_win_rate": 100.0,
  "median_survivors": 1,
  "party_size": 1
}
