simulation-wasm/tests/mechanics/snapshots/mechanics_tests__mechanics__snapshots__heavy_vs_consistent.snap
---
source: tests/snapshot_tests.rs
expression: data
---
{
  "description": "Burst Damage (Player) beats Low Dmg/High Hit (Monster)",
  "median_win_rate": 90.0,
  "median_survivors": 1,
  "party_size": 1
}
