simulation-wasm/tests/mechanics/snapshots/mechanics_tests__mechanics__snapshots__multiattack.snap
---
source: tests/mechanics/snapshots.rs
assertion_line: 177
expression: data
---
{
  "description": "Multiattack should increase damage throughput",
  "median_win_rate": 100.0,
  "median_survivors": 1,
  "party_size": 1
}
